--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@ It is the responsibility of the caller to ensure that the emitter object <code>e
 <p>If <code>e</code> is <code>0</code>, <code>emit</code> simply returns <code>0</code> without calling any functions. Because of this feature, if the emitter is held by a <code>shared_ptr</code> object <code>sp</code>, there is no harm in calling <code>emit&lt;Signal&gt;(sp.get(),&#8230;&#8203;)</code> even if <code>sp</code> is empty. Similarly, if the caller holds a <code>weak_ptr</code> reference <code>wp</code> to an emitter object which has expired, calling <code>emit&lt;Signal&gt;(wp.lock().get(),&#8230;&#8203;)</code> will simply return <code>0</code>.</p>
 </li>
 <li>
-<p><code>emit</code> takes its arguments by value. Use <code>boost::ref</code> to pass by reference (but beware of <a href="#thread_local_queue"><code>thread_local_queue</code></a> objects).</p>
+<p><code>emit</code> takes its arguments by value. Use <code>std::ref</code> to pass by reference (but beware of <a href="#thread_local_queue"><code>thread_local_queue</code></a> objects).</p>
 </li>
 </ul>
 </div>
@@ -1309,7 +1309,7 @@ It is the responsibility of the caller to ensure that the emitter object <code>e
 <p>Overloads of <code>connect</code> that return <code>shared_ptr&lt;<a href="#connection">connection</a>&gt;</code> create connections whose lifetime is explicitly managed by the user. Such connections require that the caller keeps the returned <a href="#connection"><code>connection</code></a> object alive for as long as the connection should persist.</p>
 </div>
 <div class="paragraph">
-<p>Overloads of <code>connect</code> that return <code>weak_ptr&lt;<a href="#pconnection">pconnection</a>&gt;</code> take at least one of <code>e</code> and <code>r</code> as a <code>weak_ptr</code> or <code>shared_ptr</code>. They create <em>persistent</em> connections which expire when either <code>e</code> or <code>r</code> expire.</p>
+<p>Overloads of <code>connect</code> that return <code>weak_ptr&lt;<a href="#pconnection">pconnection</a>&gt;</code> take at least one of <code>e</code> and <code>r</code> as a <code>weak_ptr</code> or <code>shared_ptr</code>. They create <em>persistent</em> connections which expire automatically when either <code>e</code> or <code>r</code> expire.</p>
 </div>
 <div class="dlist">
 <dl>
@@ -1348,7 +1348,7 @@ The returned object does not assume ownership of <code>e</code> or <code>r</code
 <i class="fa icon-important" title="Important"></i>
 </td>
 <td class="content">
-If either the emitter or the receiver, passed as raw pointers, expire before the returned <a href="#connection"><code>connection</code></a> object has expired, the behavior is undefined.
+If either the emitter or the receiver, if passed as raw pointers, expire before the returned <a href="#connection"><code>connection</code></a> object has expired, the behavior is undefined.
 </td>
 </tr>
 </table>
@@ -1403,7 +1403,16 @@ If either the emitter or the receiver, passed as raw pointers, expire before the
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-Because class <a href="#connection"><code>connection</code></a> is the protected base of class <a href="#pconnection"><code>pconnection</code></a>, handlers of <code>meta::connected&lt;Signal&gt;</code> take <code>connection &amp;</code> regardless of which <code>connect</code> overload was used.
+<div class="ulist">
+<ul>
+<li>
+<p>Because class <a href="#connection"><code>connection</code></a> is the protected base of class <a href="#pconnection"><code>pconnection</code></a>, handlers of <code>meta::connected&lt;Signal&gt;</code> take <code>connection &amp;</code> regardless of which <code>connect</code> overload was used.</p>
+</li>
+<li>
+<p>The <code>meta::connected&lt;Signal&gt;</code> signal is thread-local; it will never be queued into other threads' <code>thread_local_queue</code> objects.</p>
+</li>
+</ul>
+</div>
 </td>
 </tr>
 </table>
@@ -1786,7 +1795,16 @@ shared_ptr&lt;T&gt; receiver() <span class="directive">const</span>;</code></pre
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-Blocking affects existing as well as future connections.
+<div class="ulist">
+<ul>
+<li>
+<p>Blocking affects existing as well as future connections.</p>
+</li>
+<li>
+<p>The <code>meta::blocked&lt;Signal&gt;</code> signal is thread-local; it will never be queued into other threads' <code>thread_local_queue</code> objects.</p>
+</li>
+</ul>
+</div>
 </td>
 </tr>
 </table>
@@ -2025,7 +2043,7 @@ While <a href="#poll"><code>poll</code></a> (or <a href="#wait"><code>wait</code
 <div class="sect2">
 <h3 id="_monitoring_dynamic_systems">Monitoring dynamic systems</h3>
 <div class="paragraph">
-<p>It is often needed to monitor the operations of a complex dynamic system beyond the facilities available in its formal API. One possible option to accomplish this is to use a logging library. Synapse provides another.</p>
+<p>It is often needed to monitor the operations of a complex dynamic system beyond the facilities available in its public API. One possible option to accomplish this is to use a logging library. Synapse provides another.</p>
 </div>
 <div class="paragraph">
 <p>Consider a dynamic object environment in a video game, where various art assets may be loaded on the fly, cached, and eventually unloaded when they are no longer needed. Such events are typically not accessible through a formal interface because they are implementation details; yet there is still a need to analyze the efficiency of the caching algorithm.</p>
@@ -2081,7 +2099,7 @@ While <a href="#poll"><code>poll</code></a> (or <a href="#wait"><code>wait</code
 </div>
 </div>
 <div class="paragraph">
-<p>Next, at a global scope or during initialization, we install a handler for the <code>meta::connected&lt;SSL_info_callback&gt;</code> signal, which the <a href="#meta::connected"><code>meta::emitter</code></a> emits every time the user connects or disconnects the <code>SSL_info_callback</code> signal:</p>
+<p>Next, at a global scope or during initialization, we install a handler for the <code>meta::connected&lt;SSL_info_callback&gt;</code> signal, which the <a href="#meta::connected"><code>meta::emitter</code></a> emits every time the user connects or disconnects the <code>SSL_info_callback</code> signal we defined:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -2917,12 +2935,8 @@ The <code>init</code> argument passed will contain parentheses, so when the macr
 <div class="qlist qanda">
 <ol>
 <li>
-<p><em>How does Synapse differ from Boost Signals 2, which is also "non-intrusive"?</em></p>
-<p>The main design difference is that in Boost Signals 2 emitting a signal requires a signal object. This is significant difference because in general it is not trivial to associate a Boost Signals 2 signal object with 3rd-party objects. When using Synapse such association is not necessary because the 3rd-party object itself can be passed to <a href="#emit"><code>emit</code></a>.</p>
-</li>
-<li>
-<p><em>What is the design rationale for ignoring the value returned by connected functions?</em></p>
-<p>A typical use case for Synapse is when the caller of <code>emit</code> doesn&#8217;t care if there are 0, 1 or many connected functions. Allowing return values makes the zero/many case quite tricky to deal with. On the other hand, passing a reference or a pointer to <code>emit</code> to return/accumulate values from any number of connected functions (if needed) is simpler and fits that case nicely.</p>
+<p><em>How does Synapse differ from Boost Signals 2?</em></p>
+<p>The main design difference is that in Boost Signals 2 is intrusive; only objects of a specific Boost Signals 2 type can emit signals. This is a significant limitation because in general it is not trivial to associate a Boost Signals 2 signal object with 3rd-party objects. When using Synapse such association is not necessary because the 3rd-party object itself can be passed to <a href="#emit"><code>emit</code></a>.</p>
 </li>
 <li>
 <p><em>Is there a way to stop the emit loop before all connected functions have been called?</em></p>
