--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@ Synapse is not part of Boost.
 <p>To emit a Synapse signal, we instantiate the <code>emit</code> function template with a pre-defined signal <code>typedef</code> (e.g. <code>this_signal</code>), passing the emitter object as the first argument. The rest of the arguments follow, as defined by the signal signature (in this case a single <code>int</code> argument). Note that the emitter object passed as the first argument to <code>emit&lt;S&gt;</code> is not forwarded implicitly to the connected functions; its only purpose is to specify the <em>emitter</em>, that is, which object is emitting the signal <code>S</code>.</p>
 </div>
 <div class="paragraph">
-<p>As a more complete example, let&#8217;s define a type <code>button</code> that emits a Synapse signal <code>clicked</code> (which takes no arguments) when the member function <code>click</code> is called:</p>
+<p>As a less abstract example, let&#8217;s define a type <code>button</code> that emits a Synapse signal <code>clicked</code> (which takes no arguments) when the member function <code>click</code> is called:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -750,7 +750,7 @@ synapse::connect&lt;button::clicked&gt;(emitter, receiver, &amp;dialog::accept);
 <i class="fa icon-note" title="Note"></i>
 </td>
 <td class="content">
-The <code>receiver</code> argument to <code>connect</code> is optional. If it is specified, a pointer to the receiver object is passed as the first argument to the connected function, followed by all other arguments as specified by the signal signature.
+The <code>receiver</code> argument to <code>connect</code> is optional. If it is specified, a pointer to the receiver object is passed implicitly as the first argument to the connected function, followed by all other arguments as specified by the signal signature.
 </td>
 </tr>
 </table>
@@ -759,7 +759,10 @@ The <code>receiver</code> argument to <code>connect</code> is optional. If it is
 <div class="sect2">
 <h3 id="_emitting_signals_from_objects_of_3rd_party_types">Emitting signals from objects of 3rd-party types</h3>
 <div class="paragraph">
-<p>The <code>button</code>/<code>dialog</code> example from the previous section could have been similarly implemented using any other signal programming library, because the <code>button</code> type is specifically designed to be able to emit the <code>clicked</code> signal. But in Synapse, any object whatsoever can be used as an emitter. This makes it possible to <code>emit</code> non-intrusively even if the type of the emitter object was not designed to support signals. For example, a function that processes a file can use a standard <code>FILE</code> pointer as a Synapse emitter to report on its progress:</p>
+<p>The <code>button</code>/<code>dialog</code> example from the previous section could have been similarly implemented using any other signal programming library, because the <code>button</code> type is specifically designed to be able to emit the <code>clicked</code> signal.</p>
+</div>
+<div class="paragraph">
+<p>But in Synapse, <em>any</em> object whatsoever can be used as an emitter. This makes it possible to <code>emit</code> non-intrusively even if the type of the emitter object was not designed to support signals. For example, a function that processes a file can use a standard <code>FILE</code> pointer as a Synapse emitter to report on its progress:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -795,7 +798,7 @@ The <code>receiver</code> argument to <code>connect</code> is optional. If it is
 <p>Notice that <code>process_file</code> is not coupled with <code>QProgressBar</code>: the <code>report_progress</code> signal could be connected to a different function or not connected at all, in which case the call to <code>emit</code> would be a no-op.</p>
 </div>
 <div class="paragraph">
-<p>The cautious reader has surely noticed that in the above example we had to capture the return value of <code>synapse::connect&lt;report_progress&gt;</code> in  <code>c</code>, while we didn&#8217;t have to do this in the previous <code>button</code>/<code>dialog</code> example. This is explained below.</p>
+<p>The cautious reader has surely noticed that in the above example we had to capture the return value of <code>synapse::connect&lt;report_progress&gt;</code> in the local variable  <code>c</code>, while we didn&#8217;t have to do this in the previous <code>button</code>/<code>dialog</code> example. This is explained below.</p>
 </div>
 </div>
 <div class="sect2">
@@ -806,10 +809,10 @@ The <code>receiver</code> argument to <code>connect</code> is optional. If it is
 <div class="ulist">
 <ul>
 <li>
-<p><code>shared_ptr&lt;<a href="#connection">connection</a>&gt;</code> objects are returned by overloads of <a href="#connect"><code>connect</code></a> which take the emitter (and, if specified, the receiver) as a raw pointer. The user is required to keep the <code>connection</code> object alive; the function will be disconnected when that object expires.</p>
+<p><code>shared_ptr&lt;<a href="#connection">connection</a>&gt;</code> objects are returned by overloads of <a href="#connect"><code>connect</code></a> which take the emitter (and, if specified, the receiver) as a raw pointer. The user is required to keep the <code>connection</code> object alive; the function passed to <code>connect</code> will be disconnected when that object expires.</p>
 </li>
 <li>
-<p><code>weak_ptr&lt;<a href="#pconnection">pconnection</a>&gt;</code> objects are returned by overloads of <a href="#connect"><code>connect</code></a> which take at least one of the emitter or the receiver as a <code>weak_ptr</code> or <code>shared_ptr</code>. The user is <em>not</em> required to keep <code>pconnection</code> objects alive; the function is disconnected when Synapse detects that the emitter or the receiver have expired.</p>
+<p><code>weak_ptr&lt;<a href="#pconnection">pconnection</a>&gt;</code> objects are returned by overloads of <a href="#connect"><code>connect</code></a> which take at least one of the emitter or the receiver as a <code>weak_ptr</code> or <code>shared_ptr</code>. The user is <em>not</em> required to keep <code>pconnection</code> objects alive; the connected function is disconnected when Synapse detects that the emitter or the receiver have expired.</p>
 </li>
 </ul>
 </div>
@@ -2082,7 +2085,7 @@ While <a href="#poll"><code>poll</code></a> (or <a href="#wait"><code>wait</code
 <div class="sect2">
 <h3 id="_synapsifying_c_callbacks">Synapsifying C callbacks</h3>
 <div class="paragraph">
-<p>Synapse can be used with any C-style callback API to install C++ functions, including lambdas, as callbacks. For example, consider the <code>SSL_set_info_callback</code> from <a href="https://www.openssl.org/">OpenSSL</a>:</p>
+<p>It is common for C APIs to use function pointers to implement callback systems. A typical example is the <code>SSL_set_info_callback</code> function from <a href="https://www.openssl.org/docs/manmaster/man3/SSL_set_info_callback.html">OpenSSL</a>:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -2091,7 +2094,16 @@ While <a href="#poll"><code>poll</code></a> (or <a href="#wait"><code>wait</code
 </div>
 </div>
 <div class="paragraph">
-<p>We can define the following Synapse signal to represent this callback:</p>
+<p>Once the user calls <code>SSL_set_info_callback</code>, the C function pointed to by <code>cb</code> will be called with state information for <code>ssl</code> during connection setup and use.</p>
+</div>
+<div class="paragraph">
+<p>One difficulty with such low level C APIs is that often the user needs to pass to the callback function program-specific data. Sometimes such callback setters can be given an additional <code>void * user_data</code> argument which they retain and pass verbatim when they invoke the callback function, together with its other arguments. While this solution is rather cumbersome, it&#8217;s not even supported by <code>SSL_set_info_callback</code>.</p>
+</div>
+<div class="paragraph">
+<p>Synapse can be used with this, as well as any other C-style callback API, to install C++ function objects&#8201;&#8212;&#8201;including lambda functions&#8201;&#8212;&#8201;as callbacks. This enables additional objects needed by the callback to be captured as usual.</p>
+</div>
+<div class="paragraph">
+<p>To do this for the <code>SSL_set_info_callback</code> function, we first  define a Synapse signal with a matching signature:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -2099,7 +2111,7 @@ While <a href="#poll"><code>poll</code></a> (or <a href="#wait"><code>wait</code
 </div>
 </div>
 <div class="paragraph">
-<p>Next, at a global scope or during initialization, we install a handler for the <code>meta::connected&lt;SSL_info_callback&gt;</code> signal, which the <a href="#meta::connected"><code>meta::emitter</code></a> emits every time the user connects or disconnects the <code>SSL_info_callback</code> signal we defined:</p>
+<p>Next, at global scope or during initialization, we install a handler for the <code>meta::connected&lt;SSL_info_callback&gt;</code> signal, which the <a href="#meta::connected"><code>meta::emitter</code></a> emits every time the user connects or disconnects the <code>SSL_info_callback</code> signal we defined:</p>
 </div>
 <div class="listingblock">
 <div class="content">
@@ -2110,14 +2122,14 @@ While <a href="#poll"><code>poll</code></a> (or <a href="#wait"><code>wait</code
     connect&lt;meta::connected&lt;SSL_info_callback&gt; &gt;( meta::emitter(),
         [ ]( connection &amp; c, <span class="predefined-type">unsigned</span> flags ) { <i class="conum" data-value="1"></i><b>(1)</b>
 
-            <span class="keyword">if</span>( flags&amp;meta::connect_flags::connecting ) { <i class="conum" data-value="2"></i><b>(2)</b>
+            <span class="keyword">if</span>( flags &amp; meta::connect_flags::connecting ) { <i class="conum" data-value="2"></i><b>(2)</b>
 
-                <span class="keyword">if</span>( flags&amp;meta::connect_flags::first_for_this_emitter ) <i class="conum" data-value="3"></i><b>(3)</b>
+                <span class="keyword">if</span>( flags &amp; meta::connect_flags::first_for_this_emitter ) <i class="conum" data-value="3"></i><b>(3)</b>
                     SSL_set_info_callback(c.emitter&lt;SSL&gt;().get(),&amp;emit_fwd); <i class="conum" data-value="4"></i><b>(4)</b>
 
             } <span class="keyword">else</span> { <i class="conum" data-value="5"></i><b>(5)</b>
 
-                <span class="keyword">if</span>( flags&amp;meta::connect_flags::last_for_this_emitter ) <i class="conum" data-value="6"></i><b>(6)</b>
+                <span class="keyword">if</span>( flags &amp; meta::connect_flags::last_for_this_emitter ) <i class="conum" data-value="6"></i><b>(6)</b>
                     <span class="keyword">if</span>( <span class="directive">auto</span> ssl = c.emitter&lt;SSL&gt;() ) <i class="conum" data-value="7"></i><b>(7)</b>
                         SSL_set_info_callback(ssl.get(),<span class="integer">0</span>); <i class="conum" data-value="8"></i><b>(8)</b>
 
@@ -2140,7 +2152,7 @@ While <a href="#poll"><code>poll</code></a> (or <a href="#wait"><code>wait</code
 </tr>
 <tr>
 <td><i class="conum" data-value="2"></i><b>2</b></td>
-<td>The user is <em>connecting</em> the <code>SSL_info_callback</code> signal.</td>
+<td>The <code>SSL_info_callback</code> signal is being <em>connected</em>.</td>
 </tr>
 <tr>
 <td><i class="conum" data-value="3"></i><b>3</b></td>
@@ -2152,7 +2164,7 @@ While <a href="#poll"><code>poll</code></a> (or <a href="#wait"><code>wait</code
 </tr>
 <tr>
 <td><i class="conum" data-value="5"></i><b>5</b></td>
-<td>The user is <em>disconnecting</em> the <code>SSL_info_callback</code> signal.</td>
+<td>The <code>SSL_info_callback</code> signal is being <em>disconnected</em>.</td>
 </tr>
 <tr>
 <td><i class="conum" data-value="6"></i><b>6</b></td>
@@ -2185,7 +2197,7 @@ connect&lt;SSL_info_callback&gt;( ssl,
 <div class="sect2">
 <h3 id="_reporting_exceptions_from_code_noexcept_code_signal_handlers">Reporting exceptions from <code>noexcept</code> signal handlers</h3>
 <div class="paragraph">
-<p>Sometimes connected functions are not permitted to throw exceptions&#8201;&#8212;&#8201;this is usually the case when the callback originates in C code. With synapse, such exceptions can be reported safely to a C++ context that can store them for later processing.</p>
+<p>Sometimes connected functions are not permitted to throw exceptions&#8201;&#8212;&#8201;this is usually the case when the callback originates in C code. With Synapse, such exceptions can be reported safely to a C++ context that can store them for later processing.</p>
 </div>
 <div class="paragraph">
 <p>First, we define a Synapse signal we will use to report exceptions:</p>
